Fixed sizing overflow error v2 + Metadata updates

--- a/css/main.css
+++ b/css/main.css
@@ -425,7 +425,7 @@ position: relative;
   background: var(--clr-accent);
   overflow: hidden;
   position: relative;
-  padding: 0 0 100%;
+  padding-bottom: 65%;
 }
 
 .portfolio__img{
